team section svgs fixed on mobile

--- a/assets/scss/blocks/_team-section.scss
+++ b/assets/scss/blocks/_team-section.scss
@@ -129,5 +129,19 @@
     &__heading {
       margin-bottom: 43px;
     }
+
+    &__icon {
+      &--crown {
+        left: 150px;
+      }
+
+      &--chat {
+        left: 215px;
+      }
+
+      &--glasses {
+        left: 135px;
+      }
+    }
   }
 }
